--- a/packages/todo-website/src/index.css
+++ b/packages/todo-website/src/index.css
@@ -14,21 +14,27 @@
   -webkit-text-size-adjust: 100%;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  margin: 0px;
+  width: 100%;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
 }
 
 h1 {
@@ -36,9 +42,19 @@ h1 {
   line-height: 1.1;
 }
 
+header,
+main,
+footer {
+  padding: 0 1em;
+}
+
+header {
+  border-bottom: 1px solid white;
+}
+
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 1px solid #474747;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
@@ -47,12 +63,38 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+/* forms */
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
+form>label {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+}
+
+label>input {
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  border-radius: 8px;
+  border: 1px solid #474747;
+  transition: border-color 0.25s;
 }
 
 @media (prefers-color-scheme: light) {
@@ -60,9 +102,11 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
