--- a/packages/todo-website/src/index.css
+++ b/packages/todo-website/src/index.css
@@ -97,6 +97,29 @@ label>input {
   transition: border-color 0.25s;
 }
 
+ul.todolist {
+  padding: 0;
+}
+
+ul.todolist li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0.5em;
+  padding: 0.5em 0.5em;
+  border-bottom: 1px solid #474747;
+}
+
+ul.todolist li div {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+}
+
+ul.todolist li:first-of-type {
+  border-top: 1px solid #474747;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
